fixed overlap of nav buttons

--- a/client/_responsive.scss
+++ b/client/_responsive.scss
@@ -73,6 +73,7 @@
         .appViewContainer {
             width: 100vw;
             .startContainer{
+                padding: 10px;
                 div button,div input[type="submit"] {
                     
                     width: 40vw;
